/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package hr.fer.oop.mtexam.task2;

/**
 *
 * @author vexlexroy
 */
enum IntelligentAgentType  {
   REASONER,
   LEARNER
}
